--- a/TYCxray.tex
+++ b/TYCxray.tex
@@ -219,7 +219,7 @@
 
 %% Mark off the abstract in the ``abstract'' environment.
 \begin{abstract}
-Tight binary or multiple star systems can interact through mass transfer and hence may follow vastly different evolutionary pathways than single stars.  The star TYC 2597-735-1 is a candidate for a recent stellar merger remnant resulting from a coalescence of a low-mass companion with a primary star a few thousand years ago. This violent event is evident in a conical outflow (``Blue Ring Nebula''), now fading into the circumstellar medium, emitting exclusively in UV light and surrounded by leading shock filaments observed in H$\alpha$ and UV emission. From archival Chandra data, we report the detection of X-ray emission from the location of TYC 2597-735-1 with a luminosity $\log(L_\mathrm{X}/L_\mathrm{bol})=-5.3$.  A TESS lightcurve confirms a period of about 14~days. Together, this indicates ongoing stellar activity and the presence of strong magnetic fields on TYC 2597-735-1. Supported by stellar evolution models of merger remnants, we interpret the stellar activity as a sign of dynamo action associated with a newly formed convection zone in the atmosphere of TYC 2597-735-1, though alternative possibilities (e.g., internal shocks at the base of an accretion-powered jet) cannot be entirely ruled out.  We speculate that this object will evolve into an FK Com type source, i.e. a class of rapidly spinning magnetically active stars for which a merger origin has been proposed but for which no relic accretion or large-scale nebula still remains visible.  We also detect X-ray emission from two small regions close to the outer shock fronts in the Blue Ring Nebula, which may arise from either inhomogenities in the circumstellar medium or in the mass and velocity distribution in the merger-driven outflow.
+Tight binary or multiple star systems can interact through mass transfer and follow vastly different evolutionary pathways than single stars. The star TYC 2597-735-1 is a candidate for a recent stellar merger remnant resulting from a coalescence of a low-mass companion with a primary star a few thousand years ago. This violent event is evident in a conical outflow (``Blue Ring Nebula'') emitting in UV light and surrounded by leading shock filaments observed in H$\alpha$ and UV emission. From Chandra data, we report the detection of X-ray emission from the location of TYC 2597-735-1 with a luminosity $\log(L_\mathrm{X}/L_\mathrm{bol})=-5.3$.  A TESS lightcurve confirms a period of about 14~days. Together, this indicates ongoing stellar activity and the presence of strong magnetic fields on TYC 2597-735-1. Supported by stellar evolution models of merger remnants, we interpret the stellar activity as dynamo action associated with a newly formed convection zone in the atmosphere of TYC 2597-735-1, though internal shocks at the base of an accretion-powered jet cannot be ruled out.  We speculate that this object will evolve into an FK Com type source, i.e.\ a class of rapidly spinning magnetically active stars for which a merger origin has been proposed but for which no relic accretion or large-scale nebula remains visible.  We also detect X-ray emission from two small regions close to the outer shock fronts in the Blue Ring Nebula, which may arise from either inhomogenities in the circumstellar medium or in the mass and velocity distribution in the merger-driven outflow.
 
 \end{abstract}
 
@@ -373,7 +373,7 @@ In stellar sources, X-rays mostly originate from optically thin, collisionally e
 %\subsection{X-rays from shocks}
 %Shocks convert bulk kinetic energy into thermal energy. Possible scenarios here are an accretion shock where material falls from the disk onto the star with close to free-fall velocity, or shocks in outflows. The latter might be seen in different locations: When the outflow runs into the (almost) stationary ISM (forward-shock), the front of the outflowing material is decelerated, which also causes a reverse shock to pass back through the outflow material. Lastly, changes of the outflow velocity over time can lead to internal working surfaces that travel along the flow as faster material catches up with previous slower ejecta.
 Before we discuss possible mechanisms to generate X-ray for TYC 2597-735-1 in Sect.~\ref{sec:discussTYC} and for the resolved outflow in Sect.~\ref{sec:outflow}, we summarize the density and temperatures in strong hydrodynamical shocks, since several possible scenarios involve shock heated plasma.
-%Assume material of pre-shock density $n_{\rm pre}$ is moving with velocity $v_{\rm pre}$ into a stationary external medium (the ISM in the case of an outflow termination shock or the stellar photosphere in the case of an accretion shock) of particle density $n_{\rm ext}$.  
+%Assume material of pre-shock density $n_{\rm pre}$ is moving with velocity $v_{\rm pre}$ into a stationary external medium (the ISM in the case of an outflow termination shock or the stellar photosphere in the case of an accretion shock) of particle density $n_{\rm ext}$.
 Assume material of velocity $v_{\rm ej}$ is moving into a stationary external medium.  The velocity of the forward shock in the lab frame $v_{\rm fsh}$ is given by the shock jump conditions (for adiabatic index $\gamma = 5/3$),
 \be
 v_{\rm fsh} = \frac{4}{3}v_{\rm psh}, \label{eqn:vsh1}
@@ -422,8 +422,8 @@ L_{\rm j} \approx \frac{1}{2}\eta_{\rm j}\dot{M}_{\star}v_{\rm j}^{2} \approx 5\
 \label{eqn:jetpower}
 \ee
 This is sufficient to explain the X-ray point source overlapping TYC 2597-735-1, $L_{\rm X} \sim 10^{31}$ erg s$^{-1}$, if the entire outflow reaches internal shock speeds of order 500~km~s$^{-1}$ (Eqn.~\ref{eqn:Tshock}).
-%for instance as a result of the wind velocity increasing with time due to the radial contraction of TYC (and hence increase of the escape speed from the inner edge of the accretion disk) as the star undergoes thermal-timescale contraction following the merger \citep[][extended Figure 7]{2020Natur.587..387H}. 
-In young stars, outflows often have different velocity components, where only the fastest and innermost components shock to produce X-rays, while most of the mass in seen in slower components. For example, in DG~Tau, the measured velocity in the UV is similar to the outflow velocity of the BRN and only a small fraction of the mass loss if fast enough to generate X-rays. However, such a scenario would require an unreasonably large mass-loss, since Eqn.~\ref{eqn:jetpower} already requires that 10\% of the total accretion rate shocks to produce X-rays. Alternatively, a small fraction of the outflow could be accelerated to several times the escape speed to provide a small, but hot and luminous X-ray source. 
+%for instance as a result of the wind velocity increasing with time due to the radial contraction of TYC (and hence increase of the escape speed from the inner edge of the accretion disk) as the star undergoes thermal-timescale contraction following the merger \citep[][extended Figure 7]{2020Natur.587..387H}.
+In young stars, outflows often have different velocity components, where only the fastest and innermost components shock to produce X-rays, while most of the mass in seen in slower components. For example, in DG~Tau, the measured velocity in the UV is similar to the outflow velocity of the BRN and only a small fraction of the mass loss if fast enough to generate X-rays. However, such a scenario would require an unreasonably large mass-loss, since Eqn.~\ref{eqn:jetpower} already requires that 10\% of the total accretion rate shocks to produce X-rays. Alternatively, a small fraction of the outflow could be accelerated to several times the escape speed to provide a small, but hot and luminous X-ray source.
 
 %If the jet is conical in shape and subtends a fraction $f_{\Omega} < 1$ of the total $4\pi$ solid angle, then the radial density profile of the jet is approximately given by
 %\begin{eqnarray}
@@ -484,13 +484,13 @@ exhibits notable correlations with main sequence stellar magnetic activity and i
 
 \begin{deluxetable}{l c c c c c c c}
 %\tabletypesize{\footnotesize}
-\tablecaption{Surface Convection Zone Properties of TYC 2597-735-1 Best-fit \texttt{MESA} Evolutionary Model 
+\tablecaption{Surface Convection Zone Properties of TYC 2597-735-1 Best-fit \texttt{MESA} Evolutionary Model
 	\label{tab:mesa}}
 \tablewidth{0pt}
 \tablecolumns{7}
 \tablehead{
 	\colhead{Time} & \colhead{$R_{\star}$} & \colhead{$r_{\rm conv}$} & \colhead{$v_{\rm conv, max}$} & \colhead{$\tau_{\rm conv} == r_{\rm conv}/v_{\rm conv, max}$} & \colhead{{\bf Ro}} & \colhead{${\rm C_X}$} \\
-	 {(years)}     &    {($R_{\odot}$)}    & {(10$^{10}$ cm)}           & {(10$^{6}$ cm/s)}        & {(days)} &  
+	 {(years)}     &    {($R_{\odot}$)}    & {(10$^{10}$ cm)}           & {(10$^{6}$ cm/s)}        & {(days)} &
 }
 \startdata
 %
@@ -506,7 +506,7 @@ exhibits notable correlations with main sequence stellar magnetic activity and i
 \end{deluxetable}
 
 
-Table~\ref{tab:mesa} presents the primary star's stellar radius ($R_{\star}$), total height of the surface convection zone ($r_{conv}$), the maximum convective velocity within the convective region ($v_{conv,max}$), and the corresponding overturn time ($\tau_{\rm conv}$) at different snapshots in time since $t=0$ of the complete stellar merger in the \citet{2020Natur.587..387H} best-fit \texttt{MESA} model for TYC 2597-735-1. 
+Table~\ref{tab:mesa} presents the primary star's stellar radius ($R_{\star}$), total height of the surface convection zone ($r_{conv}$), the maximum convective velocity within the convective region ($v_{conv,max}$), and the corresponding overturn time ($\tau_{\rm conv}$) at different snapshots in time since $t=0$ of the complete stellar merger in the \citet{2020Natur.587..387H} best-fit \texttt{MESA} model for TYC 2597-735-1.
 We estimate the Rossby number (${\rm Ro}$) at each timestep in our model by assuming that angular momentum at the stellar surface is conserved over time. The merger itself inflates the stellar radius, which means the rotation period at earlier times would have to be longer than the 13.75 day rotation observed by \citet{2020Natur.587..387H} and TESS (Section~\ref{sec:TESS}) to conserve angular momentum. Even then, Ro is very large ($>$20) for t$\lesssim$2,000 years.  \citet{Pizzolato+2003} show that magnetic activity in main sequence stars ceases for ${\rm Ro} \gtrsim 10$, suggesting that for much of the time close to the merging of the two stars, TYC 2597-735-1 may not have significant magnetic activity.
 At later times ($t\gtrsim$2,000 years), ${\rm Ro}$ is within the regime where magnetic activity is present.
 
@@ -610,7 +610,7 @@ Now, due to the nature of the free-free emission spectrum, the $\nu L_{\nu}$ lum
 \be
 L_{\rm E_X > 1 keV} \sim 10^{-2}L_{\rm X} \sim 10^{32}\,{\rm erg\,s^{-1}}\left(\frac{n}{1\,{\rm cm^{-3}}}\right)^{2},
 \ee
-which depends sensitively on $kT_{\rm sh}$ (and hence $v_{\rm sh}$).  Thus, given a limit 
+which depends sensitively on $kT_{\rm sh}$ (and hence $v_{\rm sh}$).  Thus, given a limit
 of few times $10^{31}$~erg~s$^{-1}$~pc$^{-2}$ (Section~\ref{sec:xraydetection})
 we place an upper limit $n = n_{\rm max} \lesssim 1$ cm$^{-3}$ on the upstream density. We note that slower $v_{\rm sh}$ would allow higher densities.
 
